--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.4",
+    "@zegocloud/zego-uikit-prebuilt": "^2.14.1",
     "firebase": "^11.2.0",
     "lucide-react": "^0.474.0",
     "react": "^19.0.0",
